added edit modal can edit user now and add image + darkmode

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,6 @@ MONGO_PASSWORD=9JFaOPV52Oc6Xzig
 MONGO_LOGIN=yarikv1992kkp
 JWT_ACCESS=xqPSlrXHpQ5B6a8D 
 JWT_REFRESH=cAh7F8UQM3eK6NFP
- 
+CLOUD_NAME= demklciql
+CLOUD_KEY= 272747722316895
+CLOUD_SECRET=5g5koejUIfsIH0jPCXdnU1xZk0w   
