--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-scrollbar": "^3.0.5",
     "tw-elements": "^1.0.0",
     "typescript": "^4.9.5",
